--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,8 @@
         android:background="#6495EDff"
         android:drawableLeft="@drawable/baseline_person_24"
         android:drawablePadding="20dp"
-        android:hint="Имя пользователя"
-        android:inputType="text"
+        android:hint="Почта для регистрации"
+        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textSize="20dp"
