--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -51,26 +51,14 @@
         app:layout_constraintTop_toBottomOf="@+id/printUser" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/toFirst"
+        android:id="@+id/save"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_margin="60dp"
-        android:background="@drawable/baseline_arrow_circle_left_24"
+        android:background="@drawable/baseline_check_circle_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/printPass" />
-
-    <EditText
-        android:id="@+id/noInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="80dp"
-        android:background="#30ff"
-        android:text="Forgot input the infomation?"
-        android:textSize="18dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/toFirst"
         app:layout_constraintTop_toBottomOf="@+id/printPass" />
 
 
